1. Projects loading 2. h# tags have text-align fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@
 
 #not-nav {
   width: 100%;
-  /* margin-top: calc(55px + 1rem); */
+  margin-top: calc(55px + 1rem);
 
   /* &:active{
 
@@ -88,6 +88,7 @@ p, li, ul{
 h1,h2,h3{
   color: var(--br-teal);
   text-shadow: .5px .5px black;
+  text-align: center;
 }
 
 section{
